<resources>
    <string name="app_name">MNDT IV(Pokemon)</string>
    <string name="picture_width">圖片寬: </string>
    <string name="picture_height">圖片長: </string>
    <string name="select_picture">選擇圖片</string>
    <string name="built_picture">內建圖片</string>
    <string name="search_save_list">儲存列表</string>
    <string name="start_float">開始使用</string>
    <string name="stop_float">停止使用</string>
    <string name="angle_width">寬度: </string>
    <string name="angle_height">高度: </string>
    <string name="angle_size">大小: </string>
    <string name="angle_back">儲存返回</string>
    <string name="angle_setting">螢幕設定</string>
    <string name="select_name">選擇名稱</string>
    <string name="select_skill">選擇技能</string>
    <string name="select_appraise">選擇評價</string>
    <string name="appraise">隊伍評價: </string>
    <string name="back">返回</string>
    <string name="save">儲存</string>
    <string name="name">名稱: </string>
    <string name="skill1">技能1: </string>
    <string name="skill2">技能2: </string>
    <string name="player_level">人物等級: </string>
    <string name="mob_level">怪物等級: </string>
    <string name="cp">CP: </string>
    <string name="hp">HP: </string>
    <string name="star">星塵: </string>
    <string name="stop">停止</string>
    <string name="range">範圍: </string>
    <string name="compute_iv">計算IV</string>
    <string name="best_skill">推薦技能: </string>
    <string name="iv">IV: </string>
    <string name="delete">刪除</string>
    <string name="teach">使用教學</string>
    <string name="step1">步驟1: </string>
    <string name="advertising_key">ca-app-pub-3940256099942544/6300978111</string>
</resources>
