<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:text="@string/picture_height"
            android:textColor="@color/gray"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/view_image_height"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.00"
            android:ems="10"
            android:inputType="number"
            android:textColor="#bd0508"
            android:textSize="17dp"
            android:textStyle="bold" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="3dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_image_height_less"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:background="@drawable/green_button"
            android:text="-"
            android:textColor="#93131111"
            android:textStyle="bold" />

        <SeekBar
            android:id="@+id/seekBar_image_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.98"
            android:background="@drawable/pink_seek" />

        <Button
            android:id="@+id/btn_image_height_add"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:background="@drawable/green_button"
            android:text="+"
            android:textColor="#93131111"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:text="@string/picture_width"
            android:textColor="@color/gray"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/view_image_width"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:textColor="#bd0508"
            android:textSize="17dp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginTop="3dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_image_width_less"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:background="@drawable/green_button"
            android:text="-"
            android:textColor="#93131111"
            android:textStyle="bold" />

        <SeekBar
            android:id="@+id/seekBar_image_width"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.98" />

        <Button
            android:id="@+id/btn_image_width_add"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:background="@drawable/green_button"
            android:text="+"
            android:textColor="#93131111"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="6dp"
        android:layout_marginTop="4dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_select_picture"
            android:layout_width="100dip"
            android:layout_height="40dip"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="6dp"
            android:background="@drawable/blue_button"
            android:backgroundTintMode="multiply"
            android:text="@string/select_picture"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.1"
            android:orientation="horizontal">

        </LinearLayout>

        <Button
            android:id="@+id/btn_built_picture"
            android:layout_width="100dip"
            android:layout_height="40dip"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/blue_button"
            android:text="@string/built_picture"
            android:textStyle="bold" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_search_save_mob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:background="@drawable/blue_button"
            android:text="@string/search_save_list"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_teach"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:background="@drawable/blue_button"
            android:text="@string/teach"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/start_float_window"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:background="@drawable/blue_button"
            android:text="@string/start_float"
            android:textStyle="bold"></Button>

    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/stop_float_window"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:background="@drawable/blue_button"
            android:text="@string/stop_float"
            android:textStyle="bold"></Button>

    </LinearLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            ads:adSize="BANNER"
            ads:adUnitId="@string/advertising_key"></com.google.android.gms.ads.AdView>

    </RelativeLayout>

</LinearLayout>