<?xml version="1.0" encoding="UTF-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/white">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/big_window_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_iv_mob_image"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="9.35"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/name"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/gray"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/view_iv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="Unknow"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#059de4"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="6dp"
            android:layout_weight="9.35"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginTop="6dp"
                android:text="@string/mob_level"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/gray"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/view_iv_levle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="Unknow"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#059de4"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="6dp"
            android:layout_weight="9.35"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginTop="6dp"
                android:text="@string/hp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/gray"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/view_iv_hp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="Unknow"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#059de4"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="6dp"
            android:layout_weight="9.35"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginTop="6dp"
                android:text="@string/cp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/gray"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/view_iv_cp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="Unknow"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#059de4"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="6dp"
            android:layout_weight="9.35"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginTop="6dp"
                android:text="@string/star"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/gray"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/view_iv_star"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="Unknow"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#059de4"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="6dp"
            android:layout_weight="9.35"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginTop="6dp"
                android:text="@string/skill1"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/gray"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/view_iv_skill1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="MoveUnset(無技能)"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#059de4"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="6dp"
            android:layout_weight="9.35"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginTop="6dp"
                android:text="@string/skill2"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/gray"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/view_iv_skill2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="MoveUnset(無技能)"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#059de4"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="6dp"
            android:layout_weight="9.35"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/best_skill"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/gray"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/view_iv_best_skill1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="MoveUnset(無技能)"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#059de4"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/view_iv_best_skill2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="MoveUnset(無技能)"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#059de4"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="6dp"
            android:layout_weight="9.35"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginTop="6dp"
                android:text="@string/iv"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/gray"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/view_iv_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="Unknow"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#b41004"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_iv_save"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:background="@drawable/blue_button"
                android:text="@string/save"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:layout_marginTop="6dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_iv_back"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:background="@drawable/blue_button"
                android:text="@string/back"
                android:textStyle="bold" />
        </LinearLayout>

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:descendantFocusability = "blocksDescendants"
            android:layout_marginTop="15dp">

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                ads:adSize="BANNER"
                ads:adUnitId="@string/advertising_key"></com.google.android.gms.ads.AdView>

        </RelativeLayout>
    </LinearLayout>
</ScrollView>