<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/angles_setting"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/white_layout"
    android:baselineAligned="false"
    android:clickable="false"
    android:orientation="vertical"
    android:weightSum="1">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="2dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/angle_width"
            android:textColor="@color/gray"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/view_angle_width"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:textColor="#bd0508"
            android:textSize="15dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_angle_width_less"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/green_button"
            android:text="-"
            android:textColor="#93131111"
            android:textStyle="bold" />

        <SeekBar
            android:id="@+id/seekBar_angle_width"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.98"
            android:background="@drawable/pink_seek" />

        <Button
            android:id="@+id/btn_angle_width_add"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/green_button"
            android:text="+"
            android:textColor="#93131111"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="4dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/angle_height"
            android:textColor="@color/gray"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/view_angle_height"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:textColor="#bd0508"
            android:textSize="15dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_angles_height_less"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/green_button"
            android:text="-"
            android:textColor="#93131111"
            android:textStyle="bold" />

        <SeekBar
            android:id="@+id/seekBar_angle_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.98"
            android:background="@drawable/pink_seek" />

        <Button
            android:id="@+id/btn_angle_height_add"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/green_button"
            android:text="+"
            android:textColor="#93131111"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/angle_size"
            android:textColor="@color/gray"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/view_angle_size"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:ems="10"
            android:inputType="number"
            android:textColor="#bd0508"
            android:textSize="15dp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_angle_size_less"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/green_button"
            android:text="-"
            android:textColor="#93131111"
            android:textStyle="bold" />

        <SeekBar
            android:id="@+id/seekBar_angle_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.98"
            android:background="@drawable/pink_seek" />

        <Button
            android:id="@+id/btn_angles_size_add"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/green_button"
            android:text="+"
            android:textColor="#93131111"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="3dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_angle_setting_back"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/blue_button"
            android:text="@string/angle_back"
            android:textColor="#93131111"
            android:textStyle="bold" />
    </LinearLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="55dp">

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            ads:adSize="BANNER"
            ads:adUnitId="@string/advertising_key"></com.google.android.gms.ads.AdView>

    </RelativeLayout>

</LinearLayout>
